# walc

./: .clangd  .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md
docs/: basics.md  binary-format.md  cookbook.md  design.md  format.md  notes.md  text-format.md  walc-format.md  wasm.md
example/interpreter/: lambda.lua
examples/: benchmark.lambda  hello-world-recursive.lambda  hello-world.lambda  hello.lambda  loop.lambda
examples/format/: benchmark.lambda  hello.lambda
examples/interpreter/: Cargo.toml  lambda.lua  lambda.rs  lambda.ts
examples/lambda-calculus/: benchmark.walc  echo.lambda  echo.walc  hello-obfuscated.walc  hello.lambda  hello.walc  loop.walc  minimal.lambda  minimal.walc  utf8-lambda.walc
examples/rust/: Cargo.toml  Makefile  README.md  calculator.rs  echo.rs  fibonacci.rs  hello.rs  mandelbrot.rs  panic.rs  sincos.rs  tictactoe.rs  trap.rs  walc.rs
examples/walc/: benchmark.walc  echo.walc  hello-obfuscated.walc  loop.walc  utf8-lambda.walc
examples/wasm/: Cargo.toml  Makefile  README.md  build  build.sh  echo.rs  hello.rs  walc.rs
examples/wasm-minimal/: 1.wasm  1.wat  Makefile  README.md  hello.wat  minimal.wat  simple.wat
examples/wasm/.cargo/: config.toml
examples/wasm/src/: hello.rs  walc.rs
examples/wat/: Makefile  README.md  minimal.wat
interp/: lambda-precompile.c  lambda.ts
interpreter/: lambda.lua
interpreter/tests/: 1.lambda
src/: analyzer.rs  cli.rs  codegen.rs  lambda.rs  main.rs  parser.rs  walc.rs  wasm.rs
src/codegen/: arith.rs  chain.rs  const_expr.rs  core.rs  either.rs  function.rs  instruction.rs  list.rs  lists.rs  memory.rs  module.rs  number.rs  op.rs  optional.rs  pair.rs  program.rs  runtime.rs  table.rs  tree.rs  trees.rs  util.rs  walc_io.rs
src/codegen/core/: code.rs  instruction.rs  lists.rs  number.rs  trees.rs
src/codegen/instruction/: builder.rs  context.rs
src/codegen/program/: function.rs  runtime.rs
src/codegen/program/function/: instruction.rs  labels.rs
src/codegen/program/function/instruction/: arith.rs  builder.rs
src/codegen/program/runtime/: instructions.rs  math.rs
src/codegen/runtime/: global_ids.rs  instructions.rs  math.rs
src/codegen/runtime/instructions/: control_flow.rs  io.rs  memory.rs  numeric.rs  parametric.rs  trap.rs  variable.rs
src/codegen/runtime/math/: arithmetic.rs  comparisons.rs  conversions.rs  logical.rs
src/codegen/util/: instructions.rs  math.rs
src/codegen/util/instructions/: control_flow.rs  memory.rs  numeric.rs  variable.rs  walc_io.rs
tests/: Makefile  README.md  add-sub.wat  bitwise.wat  br.wat  comparisons.wat  count-ones.wat  count-zeroes.wat  div.wat  extensions.wat  function-locals.wat  function.wat  loop.wat  memory.wat  rem.wat  rotations.wat  run.ts  shift.wat  tests.json
tests/auto-spec/: wasm
tests/manual/: Makefile  comparisons.wat  function-locals.wat  if.wat  mul.wat
tests/simple/: README.md  div-zero.wat  loop.wat  run.ts  shift.wat  tests.json
tests/spec/: README.md  run.ts  tests.txt  wast2wasm.ts
tests/src/: add-sub.wat  bitwise.wat  br_table.wat  comparisons.wat  div2.wat  function-locals.wat  handle_trap.wat  memory-bulk-ops.wat  memory-grow.wat  simple.wat
tools/: README.md  lambda.c  lambda.lua  lambda.ts  pretty-print  runwasm  termcount  text2bin.ts  text2math
tools/interp-simple/: lambda.lua
