[package]
name = "walc"
version = "0.1.0"
edition = "2024"
authors = ["Mark Lagodych"]
license = "MIT"
description = "WebAssembly to Lambda Calculus compiler"

[features]
default = []

# Only for development testing and debugging: makes the compiler
# emit an unbound variable in place of unreachable code
unbound-unreachable = []

[dependencies.wasmparser]
version = "^0.244"
features = ["std", "features", "validate"] # Ignore SIMD and WASM components

[dependencies.clap]
version = "^4.5"
features = ["derive"]

[dependencies.anyhow]
version = "^1.0"

[dependencies.thiserror]
version = "^2.0"
