[package]
name = "walc"
version = "0.1.0"
edition = "2024"
authors = ["Mark Lagodych"]
license = "MIT"
description = "WebAssembly to Lambda Calculus compiler"

[features]
default = []

# Only for development testing and debugging: makes the compiler
# emit an unbound variable in place of unreachable code
unbound-unreachable = []

[dependencies.wasmparser]
version = "^0.245"
default-features = false # Disable SIMD and the Сomponent Model
features = ["std", "features", "validate"]

[dependencies.clap]
version = "^4.6"
features = ["derive"]

[dependencies.anyhow]
version = "^1.0"

[dependencies.thiserror]
version = "^2.0"
