[package]
name = "walc-wasm-examples"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "debuginfo"
lto = "fat"

# Memory allocator
[dependencies.talc]
version = "^4.4"
default-features = false
features = ["lock_api"]

[[bin]]
name = "hello"
path = "hello.rs"

[[bin]]
name = "echo"
path = "echo.rs"

[[bin]]
name = "mandelbrot"
path = "mandelbrot.rs"
