[package]
name = "walc-wasm-examples"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"

# Memory allocator
[dependencies.talc]
version = "5.0"

# Fixed-point arithmetic
[dependencies.fixed]
version = "1.31"

# For trigonometric functions with fixed-point numbers
[dependencies.cordic]
version = "0.1"

[[bin]]
name = "hello"
path = "hello.rs"

[[bin]]
name = "trap"
path = "trap.rs"

[[bin]]
name = "panic"
path = "panic.rs"

[[bin]]
name = "echo"
path = "echo.rs"

[[bin]]
name = "fibonacci"
path = "fibonacci.rs"

[[bin]]
name = "mandelbrot"
path = "mandelbrot.rs"

[[bin]]
name = "tictactoe"
path = "tictactoe.rs"

[[bin]]
name = "sincos"
path = "sincos.rs"

[[bin]]
name = "calculator"
path = "calculator.rs"

